--- a/config.env
+++ b/config.env
@@ -64,8 +64,8 @@ LEECH_DUMP_CHAT = ""
 THUMBNAIL_LAYOUT = ""
 # qBittorrent/Aria2c
 TORRENT_TIMEOUT = ""
-BASE_URL = ""
-BASE_URL_PORT = ""
+BASE_URL = "https://lovely-austina-techbot-54522dc3.koyeb.app"
+BASE_URL_PORT = "8089"
 WEB_PINCODE = "False"
 #Queueing system
 QUEUE_ALL = ""
